src/parser/snapshots/monkey_language_server__parser__test__fn_call_unhappy_9.snap
---
source: src/parser/test.rs
description: "add(2, @)"
expression: result
---
[
    Call {
        token: Token(LParen, "(", (0,3)->(0,4)),
        func: Identifier {
            token: Token(Identifier, "add", (0,0)->(0,3)),
            name: "add",
        },
        args: Err(
            Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,7)->(0,8)),
        ),
    },
]

===================================

add(2, @)
       ^ SyntaxError: Unexpected '@'.
